@@ -26,6 +26,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10183) Users can now add personal styles and scripts to all skins via
   User:<name>/common.css and /common.js (if user css/js is enabled)
 * (bug 22748) Add anchors on Special:ListGroupRights  
+* (bug 21981) Add parameter 'showfilename' to <gallery> to automatically apply
+  the names of the individual files within the gallery
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive without
